k8s-resource-manifests/keycloak/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: keycloak
  namespace: sodalite-services
  labels:
    app.kubernetes.io/name: keycloak
spec:
  containers:
  - name: keycloak
    image: sodaliteh2020/keycloak
    resources:
      limits:
        cpu: "1"
        memory: "1G"
      requests:
        cpu: "0.5"
        memory: "512M"
    volumeMounts:
      - name: keycloak-realm
        mountPath: "/home/secret/"
        readOnly: true
    ports:
    - name: http
      containerPort: 8080
    - name: https
      containerPort: 8443
  volumes:
    - name: keycloak-realm
      secret:
        secretName: keycloak-realm
        items:
          - key: sodalite-realm.json
            path: sodalite-realm.json
            mode: 0444
