k8s-resource-manifests/keycloak/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: sodalite-services
spec:
  selector:
    app.kubernetes.io/name: keycloak
  ports:
  - port: 8100
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 8443
    protocol: TCP
    name: https
